# basilisk

./: .codeiumignore  .gitignore  AGENTS.md  CONTRIBUTING.md  CPYTHON_MIGRATION_NOTES.md  Cargo.toml  KNOWN_TEST_FAILURES.md  MANIFEST.in  README.md  RENAME_STATUS.md  SECURITY.md  TODO.md  TODO_2.md  measure_cpython_init.py  publish-github-action.sh  pytest.ini  setup.py  update_candid.sh
basilisk/compiler/basilisk_cpython/: Cargo.toml  build.rs
basilisk/compiler/basilisk_cpython/src/: convert.rs  cpython_config.c  cpython_init_helper.c  dict.rs  ffi.rs  interpreter.rs  lib.rs  object.rs  tuple.rs  wasm_stubs.rs
basilisk/compiler/basilisk_generate/: Cargo.toml
basilisk/compiler/basilisk_generate/src/: backend.rs  lib.rs  main.rs
basilisk/compiler/basilisk_generate/src/body/: async_result_handler.rs  call_global_python_function.rs  mod.rs  utils.rs
basilisk/compiler/basilisk_generate/src/canister_method/: rust.rs
basilisk/compiler/basilisk_generate/src/cpython_body/: async_result_handler.rs  call_global_python_function.rs  mod.rs  unwrap_or_trap.rs  utils.rs
basilisk/compiler/basilisk_generate/src/cpython_canister_method/: init_method.rs  mod.rs  query_or_update.rs
basilisk/compiler/basilisk_generate/src/cpython_header/: mod.rs  traits.rs  use_statements.rs
basilisk/compiler/basilisk_generate/src/cpython_ic_object/: mod.rs
basilisk/compiler/basilisk_generate/src/cpython_vm_value_conversion/: mod.rs  try_from_vm_value_impls.rs  try_into_vm_value_impls.rs
basilisk/compiler/basilisk_generate/src/debug/: analyze.rs
basilisk/compiler/basilisk_generate/src/errors/: mod.rs  unreachable.rs
basilisk/compiler/basilisk_generate/src/header/: mod.rs  use_statements.rs
basilisk/compiler/basilisk_generate/src/method_utils/: params.rs  returns.rs
basilisk/compiler/basilisk_generate/src/py_ast/: py_ast.rs  (+1 more)
basilisk/compiler/cpython_canister_template/: Cargo.toml  build.rs
basilisk/compiler/cpython_canister_template/src/: async_handler.rs  ic_api.rs  lib.rs  method_dispatch.rs  python_init.rs  stable_structures.rs  type_conversions.rs  wasm_data.rs
(+858 files in other folders)
