[package]
name = "basilisk_generate"
version = "0.0.0"
edition = "2018"

[dependencies]
quote = "1.0.21"
syn = "1.0.99"
proc-macro2 = "1.0.43"
regex = "1.7.0"
rustpython-parser = { git = "https://github.com/demergent-labs/RustPython", branch = "kybra_initial", default-features = false, features = [
] }
annotate-snippets = "0.9.1"
num-bigint = "0.4.3"
backtrace = "0.3.67" # std::backtrace::Backtrace isn't clonable; backtrace::Backtrace is
cdk_framework = { git = "https://github.com/demergent-labs/cdk_framework", rev = "86b5acf42f2eba83728328b64112f446a3f8f4cb" }
